# ocaml-graph500

./: README.md  dune  kronecker.ml
lib/: dune  generate.ml  kernel1Par.mli  kernel1Seq.ml  kernel1Seq.mli  kernel2Par.ml  kernel2Par.mli  sparseGraph.ml  sparseGraph.mli
test/: dune  kernel1Par.ml  kernel1Seq.ml  kernel2Par.ml
