(library
  (name generate)
  (modules generate)
  (libraries types)
)

(library
  (name types)
  (modules types)
  (modules_without_implementation types)
)

(library
  (name sparseGraph)
  (modules sparseGraph)
  (libraries types lockfree)
)

(library
  (name kernel1Seq)
  (modules kernel1Seq)
  (libraries generate sparseGraph unix)
)

(library
  (name kernel1Par)
  (modules kernel1Par)
  (libraries generate sparseGraph unix domainslib)
)

(library
  (name kernel2Par)
  (modules kernel2Par)
  (libraries sparseGraph domainslib)
)
